---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: TBD
  Changes:
    - added mod setting for transition speed (km/h). trainsaver will now default to using the speed setting instead of the time setting when the speed setting value is greater than 0.
    - increased variable zoom modifier from ±15% to ±20%
    - updated mod setting names and descriptions for clarity and readability
    - fixed that the camera would not consistently pan back to player character when trainsaver was ending due to inactivity when transition time was greater than 0
    - increased minimum value for inactivity timeout setting from 1 second to 1 minute
    - added remote interface for other mods to check if trainsaver is active for a given player
    - added remote interface for other mods to get the currently followed target for a given player
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2121-03-06
  Changes:
    - added support for Space Exploration's Satellite Navigation view
    - added support for the Brave New World mod
    - adjusted startup function so trainsaver will follow the train with the longest remaining path instead of just choosing a random one
    - fixed that the camera would move back to the player character 60x faster than intended when trainsaver was ending due to train inactivity
    - adjusted secret focus to be more visually consistent across different display resolutions
    - various performance improvements
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2021-02-09
  Changes:
    - added setting to toggle if game controls end trainsaver
    - added setting to toggle if trainsaver will autostart when player has a gui open
    - added setting to toggle if trainsaver will autostart when player has the map open