@@ -2,7 +2,8 @@
 Version: 0.0.12
 Date: TBD
   Changes:
-    - added mod setting for transition speed (km/h). trainsaver will now default to using the speed setting instead of the time setting when the speed setting value is greater than 0.
+    - when the ltn - logistic train network mod is installed, trainsaver will prefer ltn train activity events over the base game train acitivity events
+    - added mod setting for transition speed (km/h). trainsaver will now default to using the transition speed setting instead of transition time setting when the speed setting value is greater than 0.
     - increased variable zoom modifier from ±15% to ±20%
     - updated mod setting names and descriptions for clarity and readability
     - fixed that the camera would not consistently pan back to player character when trainsaver was ending due to inactivity when transition time was greater than 0
